Added reset.css, added the header with the navbar and styled it with css

--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Professional Portfolio</title>
+    <link rel="stylesheet" href="assets/CSS/reset.css">
+    <link rel="stylesheet" href="assets/CSS/style.css" >
 </head>
+
 <body>
-    
+  <header>
+        <nav class="nav-bar">
+            <h1 class="title">Anthony's Portfolio</h1>
+            <ul class="text-right">
+                <li><a href="#news">About Me</a></li>
+                <li><a href="#contact">Work</a></li>
+                <li><a href="#about">Contact</a></li>
+            </ul>
+        </nav>
+  </header>  
+
+
+
+
 </body>
 </html>
