gave the whole nav a background color

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <nav class="nav-bar">
             <h1 class="title">Anthony's Portfolio</h1>
             <ul class="text-right">
-                <li><a href="#news">About Me</a></li>
-                <li><a href="#contact">Work</a></li>
-                <li><a href="#about">Contact</a></li>
+                <li><a href="#aboutme">About Me</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
   </header>  
